# HospiBot-AI

./: .gitignore  README.md  hospital.world  hospital_floor_dragdrop.world
bed_1/: model.sdf
bed_2/: model.sdf
cupboard_1/: model.config  model.sdf
hospital_full_stack/: install.sh
hospital_full_stack/src/fleet_interfaces/: CMakeLists.txt  package.xml
hospital_full_stack/src/fleet_interfaces/msg/: Assignment.msg  Bid.msg
hospital_full_stack/src/hospital_fleet_manager/: package.xml  setup.py
hospital_full_stack/src/hospital_fleet_manager/hospital_fleet_manager/: fleet_manager.py
hospital_full_stack/src/hospital_task_manager/: package.xml  setup.py
hospital_full_stack/src/hospital_task_manager/hospital_task_manager/: task_manager.py
hospital_full_stack/src/hospital_task_manager/launch/: hospital_system.launch.py
hospital_full_stack/src/hospital_world/: CMakeLists.txt
hospital_full_stack/src/hospital_world/robots/cleaner_robot/: model.config  model.sdf
hospital_full_stack/src/hospital_world/robots/hybrid_robot/: model.config
hospital_full_stack/src/hospital_world/robots/sample_robot/: model.config
hospital_model_floor/: model.config  model.sdf
hospital_robot_ws/: README.md  README_HUMBLE_WSL2.md  README_JAZZY_WSL2.md  move_robots.py
hospital_robot_ws/hospital_fleet/: cleaner.py  fleet_manager.py  hybrid_robot.py  main_controller.py  robot.py  sample_robot.py  task_manager.py
hospital_robot_ws/hospital_system/: main.py
hospital_robot_ws/hospital_system/allocator/: auction_allocator.py
hospital_robot_ws/hospital_system/nlp/: task_parser.py
hospital_robot_ws/hospital_system/robots/: robot.py
hospital_robot_ws/hospital_system/ui/: dashboard.py
hospital_robot_ws/scripts/: run_demo_wsl2_humble.sh  run_demo_wsl2_jazzy.sh
hospital_robot_ws/src/fleet_interfaces/msg/: Task.msg
hospital_robot_ws/src/hospital_fleet_manager/: package.xml
hospital_robot_ws/src/hospital_fleet_manager/hospital_fleet_manager/: fleet_manager.py
hospital_robot_ws/src/hospital_robot_sim/: CMakeLists.txt  README.md  package.xml  setup.py
hospital_robot_ws/src/hospital_robot_sim/config/: nav2_params.yaml  ros_gz_bridge.yaml
hospital_robot_ws/src/hospital_robot_sim/launch/: hospital_sim.launch.py  hospital_sim_jazzy.launch.py
hospital_robot_ws/src/hospital_robot_sim/models/robot_box/: model.config  model.sdf
hospital_robot_ws/src/hospital_robot_sim/models/robot_green/: model.config  model.sdf
hospital_robot_ws/src/hospital_robot_sim/models/robot_white/: model.config  model.sdf
hospital_robot_ws/src/hospital_robot_sim/msg/: AuctionResult.msg  TaskAssignment.msg
hospital_robot_ws/src/hospital_robot_sim/rviz/: hospital.rviz
hospital_robot_ws/src/hospital_robot_sim/scripts/: auction_node.py  robot_controller_node.py  task_manager_node.py
hospital_robot_ws/src/hospital_robot_sim/urdf/: robot_box.urdf  robot_green.urdf  robot_white.urdf
hospital_robot_ws/src/hospital_robot_sim/worlds/: _hospital_jazzy_static.sdf  hospital.world  hospital_jazzy.sdf
hospital_robot_ws/src/hospital_robot_sim_msgs/: CMakeLists.txt  package.xml
hospital_robot_ws/src/hospital_robot_sim_msgs/msg/: RobotStatus.msg  Task.msg
hospital_robot_ws/src/hospital_task_manager/: package.xml  setup.cfg  setup.py
hospital_robot_ws/src/hospital_task_manager/hospital_task_manager/: client_node.py  main_controller.py
hospital_robot_ws/src/hospital_task_manager/hospital_task_manager/auction/: auction_allocator.py
hospital_robot_ws/src/hospital_task_manager/hospital_task_manager/dashboard/: dashboard.py
hospital_robot_ws/src/hospital_task_manager/hospital_task_manager/nlp/: task_parser.py
hospital_robot_ws/src/hospital_task_manager/hospital_task_manager/robots/: robot.py  robot_manager.py
hospital_robot_ws/src/hospital_task_manager/hospital_task_manager/ros/: ros_interface.py
hospital_robot_ws/src/hospital_task_manager/hospital_task_manager/tasks/: scheduler.py  task.py  task_queue.py
hospital_robot_ws/src/hospital_task_manager/launch/: hospital_demo.launch.py
hospital_robot_ws/src/hospital_world/: CMakeLists.txt  package.xml
hospital_robot_ws/src/hospital_world/launch/: spawn_hospital_robots.launch.py
hospital_robot_ws/src/hospital_world/models/cleaner_robot/: model.config  model.sdf
hospital_robot_ws/src/hospital_world/models/hospital_floor_v2/: model.config  model.sdf
hospital_robot_ws/src/hospital_world/models/hybrid_robot/: model.sdf
hospital_robot_ws/src/hospital_world/models/sample_robot/: model.config  model.sdf
hospital_robot_ws/src/hospital_world/robots/hybrid_robot/: model.config  model.sdf
hospital_robot_ws/src/hospital_world/robots/sample_robot/: model.sdf
hospital_robot_ws/src/hospital_world/worlds/: hospital.world  hospital_demo.world  hospital_floor_backup.world  hospital_floor_new.world  hospital_sim.world  model.config
model_editor_models/bed_1/: model.config  model.sdf
model_editor_models/bed_2/: model.config  model.sdf
model_editor_models/bed_3/: model.config  model.sdf
model_editor_models/bed_4/: model.config  model.sdf
model_editor_models/cleaner_robot_1/: model.config  model.sdf
model_editor_models/cleaner_robot_2/: model.config  model.sdf
model_editor_models/cupboard_2/: model.config  model.sdf
model_editor_models/stool_2/: model.sdf
model_editor_models/stool_2_clone/: model.config  model.sdf
model_editor_models/stool_3/: model.config  model.sdf
model_editor_models/stool_4/: model.config  model.sdf
model_editor_models/stool_4_0/: model.config  model.sdf
model_editor_models/unit_box_0/: model.sdf
model_editor_models/unit_box_0_clone_clone/: model.config  model.sdf
model_editor_models/unit_box_2_clone_1/: model.config  model.sdf
model_editor_models/unit_box_clone_1_clone_clone/: model.config  model.sdf
model_editor_models/unit_cylinder_0/: model.config  model.sdf
model_editor_models/unit_cylinder_2_clone/: model.config  model.sdf
stool_1/: model.config  model.sdf
stool_2/: model.config  model.sdf
