<?xml version="1.0"?>
<package format="3">
  <name>hospital_fleet_manager</name>
  <version>0.0.1</version>
  <description>Fleet manager node for each hospital robot</description>
  <maintainer email="medhavi@todo.todo">medhavi</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>fleet_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
