<?xml version="1.0"?>
<package format="3">
  <name>hospital_robot_sim</name>
  <version>0.1.0</version>
  <description>Hospital Gazebo Classic simulation with autonomous mobile robots (ROS 2 Humble).</description>

  <maintainer email="anmol@todo.todo">anmol</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

