<?xml version="1.0"?>
<package format="3">
  <name>hospital_robot_sim</name>
  <version>0.1.0</version>
  <description>Hospital simulation for ROS 2 (Classic + Harmonic launch options).</description>

  <maintainer email="anmol@todo.todo">anmol</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- Gazebo Classic (Humble only) -->
  <depend condition="$ROS_DISTRO == 'humble'">gazebo_ros</depend>
  <depend condition="$ROS_DISTRO == 'humble'">gazebo_msgs</depend>

  <!-- Gazebo Harmonic (Jazzy only) -->
  <depend condition="$ROS_DISTRO == 'jazzy'">ros_gz_sim</depend>
  <depend condition="$ROS_DISTRO == 'jazzy'">ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <depend>hospital_robot_sim_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

