<?xml version="1.0"?>
<package format="3">
  <name>hospital_robot_sim_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for hospital_robot_sim.</description>

  <maintainer email="anmol@todo.todo">anmol</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>

