<?xml version="1.0"?>
<package format="3">

  <name>hospital_task_manager</name>
  <version>0.0.1</version>
  <description>Auction-based task manager for hospital robots</description>

  <maintainer email="medhavi@example.com">medhavi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>fleet_interfaces</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
